--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/samgozman/tightshorts#readme",
   "dependencies": {
+    "bulma": "^0.9.2",
     "dotenv": "^9.0.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "lightweight-charts": "^3.3.0"
   },
   "devDependencies": {
     "eslint": "^7.26.0",
