--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   "dependencies": {
     "bulma": "^0.9.2",
     "dotenv": "^9.0.2",
+    "element-resize-detector": "^1.2.2",
     "express": "^4.17.1",
+    "install": "^0.13.0",
     "lightweight-charts": "^3.3.0"
   },
   "devDependencies": {
     "eslint": "^7.26.0",
     "nodemon": "^2.0.7",
+    "npm": "^7.12.1",
     "parcel": "^2.0.0-beta.2"
   },
   "engines": {
