--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/samgozman/tightshorts#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "bulma": "^0.9.2",
     "dotenv": "^9.0.2",
     "element-resize-detector": "^1.2.2",
