--- a/package.json
+++ b/package.json
@@ -28,16 +28,20 @@
     "dotenv": "^9.0.2",
     "element-resize-detector": "^1.2.2",
     "express": "^4.17.1",
+    "htmlnano": "^1.0.0",
     "install": "^0.13.0",
-    "lightweight-charts": "^3.3.0"
+    "lightweight-charts": "^3.3.0",
+    "parcel": "^2.0.0-beta.2"
   },
   "devDependencies": {
     "eslint": "^7.26.0",
     "nodemon": "^2.0.7",
-    "npm": "^7.12.1",
-    "parcel": "^2.0.0-beta.2"
+    "npm": "^7.12.1"
   },
   "engines": {
     "node": ">=16.0.0"
+  },
+  "minifySvg": {
+    "minifySvg": false
   }
 }
