--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "parcel": "^2.0.0-beta.2"
   },
   "devDependencies": {
+    "@parcel/transformer-webmanifest": "^2.0.0-beta.2",
     "eslint": "^7.26.0",
     "nodemon": "^2.0.7",
     "npm": "^7.12.1"
