--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "htmlnano": "^1.0.0",
+    "http": "^0.0.1-security",
     "https": "^1.0.0",
     "install": "^0.13.0",
     "lightweight-charts": "^3.3.0",
