--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,6 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
@@ -107,3 +106,4 @@ config/dev.env
 .parcel-cache/
 public/
 config/prod.env
+dist/js
