--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.1.1",
   "description": "Tight Shorts - Finra short sale volume",
   "scripts": {
-    "build": "parcel build web/main.html web/screener.html web/static/liveChart.html",
+    "build": "rollup -c",
     "start": "npm run build && node -r dotenv/config src/index.mjs dotenv_config_path=config/prod.env ",
-    "dev": "npm run build && nodemon -r dotenv/config src/index.mjs -e js,mjs,hbs,css dotenv_config_path=config/dev.env",
+    "dev": "npm run build  && nodemon -r dotenv/config src/index.mjs -e js,mjs,hbs,css dotenv_config_path=config/dev.env",
     "clear": "rm -r dist .parcel-cache"
   },
   "repository": {
@@ -21,13 +21,13 @@
   "homepage": "https://github.com/samgozman/tightshorts#readme",
   "dependencies": {
     "axios": "^0.21.1",
-    "bulma": "^0.9.3",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "csurf": "^1.11.0",
     "dotenv": "^10.0.0",
     "element-resize-detector": "^1.2.2",
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.2",
     "express-validator": "^6.12.0",
     "helmet": "^4.6.0",
     "htmlnano": "^1.0.0",
@@ -35,14 +35,17 @@
     "https": "^1.0.0",
     "install": "^0.13.0",
     "lightweight-charts": "^3.3.0",
-    "parcel": "^2.0.0-beta.2",
     "validator": "^13.6.0"
   },
   "devDependencies": {
-    "@parcel/transformer-pug": "^2.0.0-beta.2",
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "eslint": "^7.30.0",
     "nodemon": "^2.0.10",
-    "npm": "^7.19.1"
+    "npm": "^7.19.1",
+    "rollup": "^2.53.0",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "engines": {
     "node": ">=16.0.0",
