--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "https": "^1.0.0",
     "install": "^0.13.0",
     "lightweight-charts": "^3.3.0",
+    "url-parse": "^1.5.1",
     "validator": "^13.6.0"
   },
   "devDependencies": {
