--- a/package.json
+++ b/package.json
@@ -1,55 +1,85 @@
 {
-  "name": "tightshorts",
-  "version": "1.1.5",
-  "description": "Tight Shorts - Finra short sale volume",
-  "scripts": {
-    "build": "rollup -c",
-    "start": "npm run build && node -r dotenv/config src/index.mjs dotenv_config_path=config/prod.env ",
-    "dev": "npm run build  && nodemon -r dotenv/config src/index.mjs -e js,mjs,hbs,css dotenv_config_path=config/dev.env",
-    "clear": "rm -r dist .parcel-cache"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/samgozman/tightshorts.git"
-  },
-  "keywords": [],
-  "author": "Sam Gozman <sam@gozman.space>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/samgozman/tightshorts/issues"
-  },
-  "homepage": "https://github.com/samgozman/tightshorts#readme",
-  "dependencies": {
-    "axios": "^0.21.4",
-    "cookie-parser": "^1.4.5",
-    "cookie-session": "^1.4.0",
-    "csurf": "^1.11.0",
-    "dotenv": "^10.0.0",
-    "element-resize-detector": "^1.2.2",
-    "express": "^4.17.1",
-    "express-handlebars": "^5.3.3",
-    "express-validator": "^6.12.1",
-    "helmet": "^4.6.0",
-    "htmlnano": "^1.1.1",
-    "http": "^0.0.1-security",
-    "https": "^1.0.0",
-    "install": "^0.13.0",
-    "lightweight-charts": "^3.6.1",
-    "url-parse": "^1.5.3",
-    "validator": "^13.6.0"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^20.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.4",
-    "eslint": "^7.32.0",
-    "nodemon": "^2.0.12",
-    "npm": "^7.24.0",
-    "rollup": "^2.56.3",
-    "rollup-plugin-node-globals": "^1.4.0",
-    "rollup-plugin-terser": "^7.0.2"
-  },
-  "engines": {
-    "node": ">=16.0.0",
-    "browsers": "> 0.5%"
-  }
+	"name": "tightshorts",
+	"version": "1.1.5",
+	"description": "Tight Shorts - Finra short sale volume",
+	"author": "Sam Gozman <sam@gozman.space>",
+	"license": "MIT",
+	"scripts": {
+		"prebuild": "rimraf dist",
+		"build": "nest build",
+		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+		"start": "nest start",
+		"start:dev": "nest start --watch",
+		"start:debug": "nest start --debug --watch",
+		"start:prod": "node dist/main",
+		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"test:cov": "jest --coverage",
+		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+		"test:e2e": "jest --config ./test/jest-e2e.json"
+	},
+	"dependencies": {
+		"@nestjs/common": "^8.0.6",
+		"@nestjs/core": "^8.0.6",
+		"@nestjs/platform-express": "^8.0.6",
+		"reflect-metadata": "^0.1.13",
+		"rimraf": "^3.0.2",
+		"rxjs": "^7.3.0"
+	},
+	"devDependencies": {
+		"@nestjs/cli": "^8.1.1",
+		"@nestjs/schematics": "^8.0.3",
+		"@nestjs/testing": "^8.0.6",
+		"@types/express": "^4.17.13",
+		"@types/jest": "^27.0.1",
+		"@types/node": "^16.9.2",
+		"@types/supertest": "^2.0.11",
+		"@typescript-eslint/eslint-plugin": "^4.31.1",
+		"@typescript-eslint/parser": "^4.31.1",
+		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"jest": "27.2.0",
+		"prettier": "^2.4.1",
+		"supertest": "^6.1.6",
+		"ts-jest": "^27.0.5",
+		"ts-loader": "^9.2.5",
+		"ts-node": "^10.2.1",
+		"tsconfig-paths": "^3.11.0",
+		"typescript": "^4.4.3"
+	},
+	"bugs": {
+		"url": "https://github.com/samgozman/tightshorts/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/samgozman/tightshorts.git"
+	},
+	"homepage": "https://github.com/samgozman/tightshorts#readme",
+	"jest": {
+		"moduleFileExtensions": [
+			"js",
+			"json",
+			"ts"
+		],
+		"rootDir": "src",
+		"testRegex": ".*\\.spec\\.ts$",
+		"transform": {
+			"^.+\\.(t|j)s$": "ts-jest"
+		},
+		"collectCoverageFrom": [
+			"**/*.(t|j)s"
+		],
+		"coverageDirectory": "../coverage",
+		"testEnvironment": "node",
+		"moduleDirectories": [
+			"node_modules",
+			"src"
+		]
+	},
+	"engines": {
+		"node": ">=16.0.0",
+		"browsers": "> 0.5%"
+	}
 }
