--- a/package.json
+++ b/package.json
@@ -8,21 +8,25 @@
 		"prebuild": "rimraf dist",
 		"build": "nest build",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-		"start": "nest start",
-		"start:dev": "nest start --watch",
-		"start:debug": "nest start --debug --watch",
-		"start:prod": "node dist/main",
+		"start": "cross-env NODE_ENV=production nest start",
+		"start:dev": "cross-env NODE_ENV=development nest start --watch",
+		"start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
+		"start:prod": "cross-env NODE_ENV=production node dist/main",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
 		"test": "jest",
-		"test:watch": "jest --watch",
-		"test:cov": "jest --coverage",
-		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-		"test:e2e": "jest --config ./test/jest-e2e.json"
+		"test:github": "cross-env NODE_ENV=github jest",
+		"test:watch": "cross-env NODE_ENV=test jest --watch",
+		"test:cov": "cross-env NODE_ENV=test jest --coverage",
+		"test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+		"test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
+		"@hapi/joi": "^17.1.1",
 		"@nestjs/common": "^8.0.6",
+		"@nestjs/config": "^1.0.1",
 		"@nestjs/core": "^8.0.6",
 		"@nestjs/platform-express": "^8.0.6",
+		"helmet": "^4.6.0",
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
 		"rxjs": "^7.3.0"
@@ -32,11 +36,13 @@
 		"@nestjs/schematics": "^8.0.3",
 		"@nestjs/testing": "^8.0.6",
 		"@types/express": "^4.17.13",
+		"@types/hapi__joi": "^17.1.7",
 		"@types/jest": "^27.0.1",
 		"@types/node": "^16.9.2",
 		"@types/supertest": "^2.0.11",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
 		"@typescript-eslint/parser": "^4.31.1",
+		"cross-env": "^7.0.3",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
