--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,17 @@
 {
-  "singleQuote": true,
-  "tabWidth": 2,
-  "useTabs": true,
-  "semi": true,
-  "trailingComma": "all",
-  "endOfLine": "lf"
+	"singleQuote": true,
+	"tabWidth": 2,
+	"useTabs": true,
+	"semi": true,
+	"printWidth": 110,
+	"trailingComma": "all",
+	"endOfLine": "lf",
+	"overrides": [
+		{
+			"files": "*.hbs",
+			"options": {
+				"singleQuote": false
+			}
+		}
+	]
 }
