--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
 		"@nestjs/config": "^1.0.1",
 		"@nestjs/core": "^8.0.6",
 		"@nestjs/platform-express": "^8.0.6",
+		"axios": "^0.21.4",
+		"class-transformer": "^0.4.0",
+		"class-validator": "^0.13.1",
 		"cookie-parser": "^1.4.5",
 		"cookie-session": "^1.4.0",
 		"csurf": "^1.11.0",
