--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"test:watch": "npm run rollup && cross-env NODE_ENV=test jest --watch",
 		"test:cov": "npm run rollup && cross-env NODE_ENV=test jest --coverage",
 		"test:debug": "npm run rollup && cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-		"test:e2e": "npm run rollup && cross-env NODE_ENV=test jest --config ./test/jest-e2e.json"
+		"test:e2e": "npm run rollup && cross-env NODE_ENV=test jest --config ./test/jest-e2e.json",
+		"test:e2e:github": "npm run rollup && cross-env NODE_ENV=github jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
 		"@hapi/joi": "^17.1.1",
