--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
 		"@nestjs/config": "^1.1.0",
 		"@nestjs/core": "^8.2.0",
 		"@nestjs/platform-express": "^8.2.1",
+		"@ntegral/nestjs-sentry": "^3.0.6",
+		"@sentry/node": "^6.15.0",
+		"@sentry/tracing": "^6.15.0",
 		"axios": "^0.24.0",
 		"class-transformer": "^0.4.0",
 		"class-validator": "^0.13.1",
