--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
 	"author": "Sam Gozman <sam@gozman.space>",
 	"license": "MIT",
 	"scripts": {
-		"prebuild": "rimraf dist",
 		"build": "nest build",
 		"rollup": "rollup -c",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
 		"start": "npm run rollup && cross-env NODE_ENV=production nest start",
 		"start:dev": "npm run rollup && cross-env NODE_ENV=development nest start --watch",
 		"start:debug": "npm run rollup && cross-env NODE_ENV=development nest start --debug --watch",
-		"start:prod": "npm run rollup && cross-env NODE_ENV=production node dist/main",
+		"start:prod": "npm run rollup && cross-env NODE_ENV=production node build/main",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
 		"test": "jest",
 		"test:github": "npm run rollup && cross-env NODE_ENV=github jest",
@@ -43,7 +42,6 @@
 		"htmlnano": "^1.1.1",
 		"lightweight-charts": "^3.7.0",
 		"reflect-metadata": "^0.1.13",
-		"rimraf": "^3.0.2",
 		"rxjs": "^7.4.0",
 		"url-parse": "^1.5.3"
 	},
