Change nginx conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,17 +1,27 @@
-server {
-	listen 80 default_server;
+worker_processes auto;
 
-	server_name _;
+events {
+  worker_connections 512;
+}
 
-	server_tokens off;
+http {
+  include mime.types;
 
-	proxy_http_version 1.1;
-	proxy_set_header Upgrade $http_upgrade;
-	proxy_set_header Connection 'upgrade';
-	proxy_set_header Host $host;
-	proxy_cache_bypass $http_upgrade;
+  server {
+    listen 80 default_server;
 
-	location / {
-		proxy_pass http://tightshorts:3000;
-	}
+		server_name _;
+
+		server_tokens off;
+
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection 'upgrade';
+		proxy_set_header Host $host;
+		proxy_cache_bypass $http_upgrade;
+
+		location / {
+			proxy_pass http://tightshorts:3000;
+		}
+  }
 }
