Fix error in nginx config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,7 +21,7 @@ http {
 		proxy_cache_bypass $http_upgrade;
 
 		location / {
-			proxy_pass http://tightshorts:3000;
+			proxy_pass http://localhost:3000;
 		}
   }
 }
