--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"test:e2e:github": "npm run rollup && cross-env NODE_ENV=github jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
+		"@hapi/joi": "^17.1.1",
 		"@nestjs/common": "^8.2.3",
 		"@nestjs/config": "^1.1.5",
 		"@nestjs/core": "^8.2.3",
@@ -39,7 +40,6 @@
 		"express-handlebars": "^6.0.2",
 		"helmet": "^4.6.0",
 		"htmlnano": "^1.1.1",
-		"joi": "^17.6.0",
 		"lightweight-charts": "^3.7.0",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^7.4.0",
@@ -56,7 +56,7 @@
 		"@types/csurf": "^1.11.2",
 		"@types/express": "^4.17.13",
 		"@types/express-handlebars": "^6.0.0",
-		"@types/hapi__joi": "^17.1.8",
+		"@types/hapi__joi": "^17.1.7",
 		"@types/jest": "^27.0.1",
 		"@types/node": "^16.11.12",
 		"@types/supertest": "^2.0.11",
@@ -74,9 +74,9 @@
 		"supertest": "^6.1.6",
 		"ts-jest": "^27.1.0",
 		"ts-loader": "^9.2.6",
-		"ts-node": "^10..0",
+		"ts-node": "^10.4.0",
 		"tsconfig-paths": "^3.12.0",
-		"typescript": "^4.5.5"
+		"typescript": "^4.5.2"
 	},
 	"bugs": {
 		"url": "https://github.com/samgozman/tightshorts/issues"
