--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"license": "MIT",
 	"scripts": {
 		"build": "nest build",
+		"build:docker:dev": "docker build . -t ghcr.io/samgozman/tightshorts:dev ",
 		"rollup": "rollup -c",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
 		"start": "npm run rollup && cross-env NODE_ENV=production nest start",
@@ -19,7 +20,8 @@
 		"test:cov": "npm run rollup && cross-env NODE_ENV=test jest --coverage",
 		"test:debug": "npm run rollup && cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
 		"test:e2e": "npm run rollup && cross-env NODE_ENV=test jest --config ./test/jest-e2e.json",
-		"test:e2e:github": "npm run rollup && cross-env NODE_ENV=github jest --config ./test/jest-e2e.json"
+		"test:e2e:github": "npm run rollup && cross-env NODE_ENV=github jest --config ./test/jest-e2e.json",
+		"push:docker:dev": "npm run build:docker:dev && docker push ghcr.io/samgozman/tightshorts:dev"
 	},
 	"dependencies": {
 		"@nestjs/common": "^8.2.3",
