--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,6 +7,14 @@ events {
 http {
 	include mime.types;
 
+	# TODO: Create redirect from 80 to 443 
+	# Set 443 as default server
+	# server {
+	# 	listen 80;
+	# 	server_name _;
+	# 	return 301 https://$host$request_uri;
+	# }
+
 	server {
 		listen 80 default_server;
 
@@ -24,4 +32,30 @@ http {
 			proxy_pass http://localhost:3000;
 		}
 	}
+
+	# server {
+	# 	listen 443 ssl http2;
+	# 	server_name tightshorts.ru www.tightshorts.ru;
+
+	# 	ssl_certificate /etc/nginx/ssl/self.crt;
+	# 	ssl_certificate_key /etc/nginx/ssl/self.key;
+
+	# 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+
+	# 	# Optimise cipher suits
+	# 	ssl_prefer_server_ciphers on;
+	# 	ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+
+	# 	# Enable HSTS
+	# 	add_header Strict-Transport-Security "max-age=31536000" always;
+
+	# 	# SSL sessions
+	# 	ssl_session_cache shared:SSL:40m;
+	# 	ssl_session_timeout 4h;
+	# 	ssl_session_tickets on;
+
+	# 	location / {
+	# 		proxy_pass http://localhost:3000;
+	# 	}
+	# }
 }
