--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
     restart: unless-stopped
     volumes:
       - ./dist:/dist
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
     env_file:
       - ./config/web.development.env
     depends_on:
@@ -18,6 +20,8 @@ services:
     restart: unless-stopped
     volumes:
       - ./data:/data/db
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
     env_file:
       - ./config/api.production.env
 
@@ -31,5 +35,5 @@ services:
     depends_on:
       - mongodb
     volumes:
-    - '/etc/timezone:/etc/timezone:ro'
-    - '/etc/localtime:/etc/localtime:ro'
+    - /etc/timezone:/etc/timezone:ro
+    - /etc/localtime:/etc/localtime:ro
