--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,6 +7,8 @@ events {
 http {
 	include mime.types;
 
+	root /tightshorts/dist/;
+
 	# TODO: Create redirect from 80 to 443 
 	# Set 443 as default server
 	# server {
@@ -18,7 +20,7 @@ http {
 	server {
 		listen 80 default_server;
 
-		server_name _;
+		server_name tightshorts.ru;
 
 		server_tokens off;
 
@@ -29,6 +31,10 @@ http {
 		proxy_cache_bypass $http_upgrade;
 
 		location / {
+			try_files $uri @proxy;
+		}
+
+		location @proxy {
 			proxy_pass http://localhost:3000;
 		}
 	}
