--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -43,8 +43,8 @@ http {
 	# 	listen 443 ssl http2;
 	# 	server_name tightshorts.ru www.tightshorts.ru;
 
-	# 	ssl_certificate /etc/nginx/ssl/self.crt;
-	# 	ssl_certificate_key /etc/nginx/ssl/self.key;
+	# 	ssl_certificate /etc/letsencrypt/live/tightshorts/fullchain.pem;
+	# 	ssl_certificate_key /etc/letsencrypt/live/tightshorts/privkey.pem;
 
 	# 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 
