--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,20 +9,11 @@ http {
 
 	root /tightshorts/dist/;
 
-	# TODO: Create redirect from 80 to 443 
-	# Set 443 as default server
-	# server {
-	# 	listen 80;
-	# 	server_name _;
-	# 	return 301 https://$host$request_uri;
-	# }
-
+	# Redirect 80 => 443
 	server {
-		listen 80 default_server;
-
-		server_name tightshorts.ru;
-
+		listen 80;
 		server_tokens off;
+		server_name _;
 
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
@@ -30,6 +21,31 @@ http {
 		proxy_set_header Host $host;
 		proxy_cache_bypass $http_upgrade;
 
+		return 301 https://$host$request_uri;
+	}
+
+	server {
+		listen 443 ssl http2 default_server;
+		server_name tightshorts.ru www.tightshorts.ru;
+
+		ssl_certificate /etc/letsencrypt/live/tightshorts/fullchain.pem;
+		ssl_certificate_key /etc/letsencrypt/live/tightshorts/privkey.pem;
+
+		ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+
+		# Optimise cipher suits
+		ssl_prefer_server_ciphers on;
+		ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+
+		# Enable HSTS
+		add_header Strict-Transport-Security "max-age=31536000" always;
+
+		# SSL sessions
+		ssl_session_cache shared:SSL:40m;
+		ssl_session_timeout 4h;
+		ssl_session_tickets on;
+
+		# First try static files
 		location / {
 			try_files $uri @proxy;
 		}
@@ -38,30 +54,4 @@ http {
 			proxy_pass http://localhost:3000;
 		}
 	}
-
-	# server {
-	# 	listen 443 ssl http2;
-	# 	server_name tightshorts.ru www.tightshorts.ru;
-
-	# 	ssl_certificate /etc/letsencrypt/live/tightshorts/fullchain.pem;
-	# 	ssl_certificate_key /etc/letsencrypt/live/tightshorts/privkey.pem;
-
-	# 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-
-	# 	# Optimise cipher suits
-	# 	ssl_prefer_server_ciphers on;
-	# 	ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
-
-	# 	# Enable HSTS
-	# 	add_header Strict-Transport-Security "max-age=31536000" always;
-
-	# 	# SSL sessions
-	# 	ssl_session_cache shared:SSL:40m;
-	# 	ssl_session_timeout 4h;
-	# 	ssl_session_tickets on;
-
-	# 	location / {
-	# 		proxy_pass http://localhost:3000;
-	# 	}
-	# }
 }
