--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
       - ./config/api.production.env
 
   finra-short-api:
-    image: 'ghcr.io/samgozman/finra-short-api:dev'
+    image: 'ghcr.io/samgozman/finra-short-api:latest'
     restart: unless-stopped
     ports:
       - '3001:3001'
