--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: ['https://www.tinkoff.ru/rm/gozman.semen1/Ol0PS3882', 'https://paypal.me/sgozman']
+custom: ['https://ko-fi.com/samgozman', 'https://paypal.me/sgozman']
