--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "tightshorts",
-	"version": "1.2.9",
+	"version": "1.3.0",
 	"description": "Tight Shorts - Finra short sale volume",
 	"author": "Sam Gozman <sam@gozman.space>",
 	"license": "MIT",
@@ -42,7 +42,7 @@
 		"helmet": "^4.6.0",
 		"htmlnano": "^1.1.1",
 		"joi": "^17.6.0",
-		"lightweight-charts": "^3.8.0",
+		"lightweight-charts": "=3.7.0",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^7.5.4",
 		"url-parse": "^1.5.3"
