--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,7 +26,7 @@ http {
 
 	server {
 		listen 443 ssl http2 default_server;
-		server_name tightshorts.ru www.tightshorts.ru;
+		server_name tightshorts.extr.app www.tightshorts.extr.app;
 
 		ssl_certificate /etc/letsencrypt/live/tightshorts/fullchain.pem;
 		ssl_certificate_key /etc/letsencrypt/live/tightshorts/privkey.pem;
